--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     compile('io.springfox:springfox-swagger2:2.9.2')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
 
+    //modelmapper
+    compile('org.modelmapper:modelmapper:2.3.0')
+
     runtimeOnly('com.h2database:h2')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
 
