--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+group = 'com.heavenhr'
+version = '0.0.1-SNAPSHOT'
+
 buildscript {
     ext {
         springBootVersion = '2.0.5.RELEASE'
@@ -10,19 +13,27 @@ buildscript {
     }
 }
 
+apply plugin: 'war'
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'com.heavenhr'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
+configurations {
+    providedRuntime
+}
+
+bootRun {
+    systemProperties = System.properties
+}
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
