--- a/build.gradle
+++ b/build.gradle
@@ -43,16 +43,16 @@ dependencies {
     compileOnly('org.projectlombok:lombok')
 
     //swagger
-    compile('io.springfox:springfox-swagger2:2.9.2') {
+    implementation('io.springfox:springfox-swagger2:2.9.2') {
         exclude module: 'swagger-annotations'
         exclude module: 'swagger-models'
     }
-    compile("io.swagger:swagger-annotations:1.5.21")
-    compile("io.swagger:swagger-models:1.5.21")
-    compile('io.springfox:springfox-swagger-ui:2.9.2')
+    implementation("io.swagger:swagger-annotations:1.5.21")
+    implementation("io.swagger:swagger-models:1.5.21")
+    implementation('io.springfox:springfox-swagger-ui:2.9.2')
 
     //modelmapper
-    compile('org.modelmapper:modelmapper:2.3.0')
+    implementation('org.modelmapper:modelmapper:2.3.0')
 
     runtimeOnly('com.h2database:h2')
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
